
  [ Stefano Rivera ]
  * Bump standards-Version to 4.5.1, no changes needed.
  * Bump copyright years.
  * Re-black Python.

  [ Brian Murray ]
  * Provide support for the milestone eol-esm and add filters for
    supported-esm to ubuntu-distro-info along with the python and perl
    modules. (LP: #1808038)
  * Only include LTS releases when filtering by supported-esm.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 27 Jan 2021 19:46:16 -0700

distro-info (0.24) unstable; urgency=medium

  * Fix issues found by pylint 2.6.0 (Closes: #971094)
  * Blacken Python code
  * python: Define sets directly
  * Bump Standards-Version to 4.5.0
  * Switch to debhelper 13

 -- Benjamin Drung <bdrung@debian.org>  Mon, 28 Sep 2020 19:36:32 +0200

distro-info (0.23) unstable; urgency=medium

  * Drop python2 support; Closes: #943052, #936408

 -- Sandro Tosi <morph@debian.org>  Wed, 08 Jan 2020 23:06:26 -0500

distro-info (0.22) unstable; urgency=medium

  * Drop testing Python 2 code with Pylint
  * Rename build dependency pylint3 to pylint (Closes: #940178)
  * Switch to debhelper 12
  * Bump Standards-Version to 4.4.0 (no changes needed)

 -- Benjamin Drung <bdrung@debian.org>  Sat, 14 Sep 2019 15:44:13 +0200

distro-info (0.21) unstable; urgency=medium

  [ Benjamin Drung ]
  * Fix spelling mistake of exactly.
    Thanks to Brian Murray <brian@ubuntu.com> (Closes: #921581)
  * Bump Standards-Version to 4.3.0 (no changes needed)

  [ Balint Reczey ]
  * Support getting release version by codename in the Perl and Python API
    (Closes: #896640)

 -- Benjamin Drung <bdrung@debian.org>  Sun, 10 Feb 2019 00:29:24 +0100

distro-info (0.20) unstable; urgency=medium

  * Fix build failure with LC_ALL=POSIX by explicitly opening
    debian/changelog as UTF-8 in setup.py.

 -- Benjamin Drung <bdrung@debian.org>  Fri, 12 Oct 2018 12:00:35 +0200

distro-info (0.19) unstable; urgency=medium

  [ Stefano Rivera ]
  * Migrate VCS to salsa.debian.org.

  [ Ondřej Nový ]