@@ -31,7 +31,14 @@ class Flake8TestCase(unittest.TestCase):
 
     def test_flake8(self):
         """Test: Run flake8 on Python source code"""
-        cmd = [sys.executable, "-m", "flake8", "--max-line-length=99"] + get_source_files()
+        cmd = [
+            sys.executable,
+            "-m",
+            "flake8",
+            "--ignore",
+            "H301,H403,H405,W504",
+            "--max-line-length=99",
+        ] + get_source_files()
         if unittest_verbosity() >= 2:
             sys.stderr.write("Running following command:\n{}\n".format(" ".join(cmd)))
         process = subprocess.Popen(
